tests/baselines/reference/project/baseline3/amd/baseline3.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== nestedModule.ts (0 errors) ====
    export module outer {
    	export module inner {
    		var local = 1;
    		export var a = local;
    	}
    }